# ddd-in-rust

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.devcontainer/scripts/: post-create-command.sh
scripts/: migrate.sh
sql/: 20220516125826_user.sql  20220516125850_extensions.sql  20220608145916_club.sql  20220608150008_club_members.sql  20220608150444_user.sql  20220608150920_club_members.sql  20220608151109_alter.sql  20220609125009_user.sql
src/: main.rs
src/application/: mod.rs  user_application_service.rs
src/application/club/: club_create_service.rs  club_join_service.rs  club_recommendation_service.rs  mod.rs
src/application/club/specifications/: mod.rs
src/application/user/: mod.rs  user_delete_service.rs  user_downgrade_service.rs  user_get_info_service.rs  user_register_service.rs  user_update_info_service.rs  user_upgrade_service.rs
src/domain/: user.rs  user_service.rs
src/domain/entity/: mod.rs  user.rs  user_service.rs
src/domain/entity/user/: mod.rs
src/domain/model/: mod.rs
src/domain/model/club/: mod.rs
src/domain/model/user/: mod.rs
src/domain/repository/: user_repository.rs  user_repository_trait.rs
src/infrastructure/: database.rs  mod.rs
src/infrastructure/command_line/: mod.rs
src/infrastructure/database/: in_memory_user_repository.rs  mod.rs  postgres_user_repository.rs
src/infrastructure/web_server/: mod.rs
src/interface/controller/: club_controller.rs  mod.rs  user_controller.rs
src/interface/repository/: mod.rs  user_database.rs  user_repository.rs
src/repository/: user_repository.rs
(+48 files in other folders)
