[package]
name = "ddd-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "uuid", "postgres"] }

rand = "0.8.4"
anyhow = "1.0"
once_cell = "1.10.0"
async-trait = "0.1"
clap = { version = "3.1.18", features = ["derive"] }
